--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    
+    <meta property="og:title" content="Centro de Capacitación, Investigación y Desarrollo Tecnológico en Energía y Sustentabilidad CIDTES A. C.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cidtes.vercel.app/">
+    <meta property="og:description" content="Organización interdisciplinaria que brinda soluciones integrales en energía y sustentabilidad, seguridad y salud en el trabajo y desarrollo organizacional a la sociedad en general">
+    <!--meta property="og:image" content="%PUBLIC_URL%/opengraph.png"-->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CIDTES</title>
